Java warning fixes